navbar overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   --normal: 250ms;
   --header-height: 4rem;
   --footer-height: 11rem;
-  --nav-width: 26ch;
+  --nav-width: 27ch;
   --logo-size: 3rem;
   --lightergray: #E5E5E5;
 }
